# python-project-52

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint-and-test.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at.py  0003_alter_label_options_alter_label_created_at.py  0004_alter_label_options_alter_label_created_at.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0003_alter_status_options_alter_status_created_at.py  0004_alter_status_options_alter_status_created_at.py  0005_alter_status_options_alter_status_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_created_at.py  0004_task_labels.py  0005_alter_task_labels.py  0006_alter_task_options_alter_task_author_and_more.py  0007_alter_task_options_alter_task_author_and_more.py  (+1 more)
task_manager/tests/: test_labels.py  test_statuses.py  test_task_manager.py  test_task_users.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  delete.html  form.html  index.html
templates/labels/: labels.html
templates/statuses/: statuses.html
templates/tasks/: task_view.html  tasks.html
templates/users/: users.html
tests/: test_statuses.py
(+3 files in other folders)
