[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]
repository = "<https://github.com/Trankvill/python-project-52>"

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
Django = "^4.1.7"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
django-bootstrap4 = "^22.3"
whitenoise = "^6.4.0"
dj-database-url = "^1.2.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
